<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              >
	<ScrollView 
	  android:id="@+id/ScrollView01" 
	  android:layout_width="fill_parent" 
	  android:layout_height="fill_parent"
	>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp"
         >
			<TextView android:id="@+id/feedprops_howto" 
				android:text="@string/feedprops_howto"
				android:paddingBottom="10.0sp" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<TextView android:id="@+id/feedprops_name_title" 
				android:text="Name" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<EditText android:id="@+id/feedprops_name" 
				android:text="" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<requestFocus/>
			</EditText>
			<TextView android:id="@+id/feedprops_url_title" 
				android:text="@string/feedprops_url_title" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<EditText android:id="@+id/feedprops_url" 
				android:text="" 
				android:inputType="textUri"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<requestFocus/>
			</EditText>
			<TextView android:id="@+id/feedprops_autopoll_title" 
				android:text="@string/feedprops_autopoll_title" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<Spinner android:id="@+id/feedprops_autopoll_freq" 
				android:prompt="@string/feedprops_autopoll_title" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"/>
				
			<TextView android:id="@+id/feedprops_content_convert_title"
				android:text="@string/feedprops_content_convert_title" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</TextView>
			<Spinner android:id="@+id/feedprops_content_convert" 
				android:prompt="@string/feedprops_content_convert_title" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
			</Spinner>
			
			<LinearLayout android:id="@+id/LinearLayout01" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
	  			android:layout_weight="1"
	  			android:layout_gravity="top"
				>
				<Button android:id="@+id/feedprops_button_save" 
					android:text="@string/button_save"
					android:layout_weight="1" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</Button>
				<Button android:id="@+id/feedprops_button_cancel" 
					android:text="@string/button_cancel" 
					android:layout_weight="1" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</Button>
			</LinearLayout>
		
		

</LinearLayout>	
	</ScrollView>
</LinearLayout>
